# ipe_generator

./: .gitignore  CMakeLists.txt  README.md
cmake/: ipegeneratorConfig.cmake.in  ipegeneratorConfigVersion.cmake.in
cmake/Modules/: FindIPE.cmake  FindIpe.cmake
include/ipe/: ipeattributes.h  ipebase.h  ipebitmap.h  ipedoc.h  ipefactory.h  ipegeo.h  ipegroup.h  ipeimage.h  ipeiml.h  ipelatex.h  ipelet.h  ipelib.h  ipeobject.h  ipeosx.h  ipepage.h  ipepainter.h  ipepath.h  ipepdfparser.h  ipepdfwriter.h  ipepswriter.h  ipereference.h  iperesources.h  ipeshape.h  ipesnap.h  ipestyle.h  ipetext.h  ipetoolbase.h  ipeutils.h  ipexml.h
install/: ipegenerator.pc.in
src/: CMakeLists.txt  figure.cpp  figure.h  main.cpp  model.cpp
src/core/: CMakeLists.txt  figure.cpp  figure.h  model.cpp
src/ipe/: CMakeLists.txt  ipeattributes.cpp  ipebase.cpp  ipebitmap.cpp  ipebitmap_unix.cpp  ipedoc.cpp  ipefactory.cpp  ipegeo.cpp  ipegroup.cpp  ipeimage.cpp  ipeiml.cpp  ipelatex.cpp  ipeobject.cpp  ipepage.cpp  ipepainter.cpp  ipepath.cpp  ipepdfparser.cpp  ipepdfwriter.cpp  ipeplatform.cpp  ipereference.cpp  iperesources.cpp  ipeshape.cpp  ipesnap.cpp  ipestdstyles.cpp  ipestyle.cpp  ipetext.cpp  ipetoolbase.cpp  ipeutils.cpp  ipexml.cpp
style/: basic.ipe  basic.isy  ipegenerator_style.isy
test/: main.cpp
