# ==================================================================
#  Ipegenerator - cmake configuration file
# ==================================================================

list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/figure.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/figure.h
        ${CMAKE_CURRENT_SOURCE_DIR}/model.cpp
        )


################################################################################
# Create the target for libipegenerator
################################################################################

add_library(ipegenerator ${SRC})
#set_property(TARGET codac PROPERTY CXX_STANDARD 17)
add_compile_options(-O3 -Wall)
target_link_libraries(ipegenerator ipe ${CODAC_LIBRARIES} Ibex::ibex ${CODAC_LIBRARIES})
#set_property(TARGET codac PROPERTY CXX_STANDARD_REQUIRED ON)


################################################################################
# Installation of libipegenerator files
################################################################################

# Getting header files from sources

foreach(srcfile ${SRC})
    if(srcfile MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
        list(APPEND HDR ${srcfile})
        # Copying header files for other ipegenerator libraries compiled in the same time
        file(COPY ${srcfile} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
    endif()
endforeach()

# Generating a ipe.h file

set(IPE_GENERATOR_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/ipegenerator.h)
file(WRITE ${IPE_GENERATOR_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
file(APPEND ${IPE_GENERATOR_MAIN_HEADER} "#ifndef __IPE_GENERATOR_H__\n#define __IPE_GENERATOR_H__\n\n")
# Simplifying access to frequently used items of IBEX
file(APPEND ${IPE_GENERATOR_MAIN_HEADER} "\n")
foreach(header_path ${HDR})
    get_filename_component(header_name ${header_path} NAME)
    file(APPEND ${IPE_GENERATOR_MAIN_HEADER} "#include <${header_name}>\n")
endforeach()
file(APPEND ${IPE_GENERATOR_MAIN_HEADER} "\n#endif /* __IPE_GENERATOR_H__ */\n")
file(COPY ${IPE_GENERATOR_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)

# Install files in system directories

install(TARGETS ipegenerator DESTINATION ${CMAKE_INSTALL_LIBDIR} EXPORT ipegenerator)
install(FILES ${HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ipegenerator)
install(FILES ${IPE_GENERATOR_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ipegenerator)
