# ==================================================================
#  Ipegenerator - cmake configuration file
# ==================================================================

list(APPEND SRC ${CMAKE_CURRENT_SOURCE_DIR}/ipeattributes.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeattributes.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipebase.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipebase.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipebitmap.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipebitmap.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipebitmap_unix.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipedoc.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipedoc.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipefactory.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipefactory.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipegeo.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipegeo.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipegroup.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipegroup.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeimage.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeimage.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeiml.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeiml.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipelatex.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipelatex.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipelet.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipelib.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeobject.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeobject.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeosx.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepage.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepage.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepainter.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepainter.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepath.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepath.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepdfparser.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepdfparser.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepdfwriter.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepdfwriter.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeplatform.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipepswriter.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipereference.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipereference.h
        ${CMAKE_CURRENT_SOURCE_DIR}/iperesources.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/iperesources.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeshape.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeshape.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipesnap.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipesnap.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipestdstyles.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipestyle.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipestyle.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipetext.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipetext.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipetoolbase.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipetoolbase.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeutils.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipeutils.h
        ${CMAKE_CURRENT_SOURCE_DIR}/ipexml.cpp
        ${CMAKE_CURRENT_SOURCE_DIR}/ipexml.h
        )


################################################################################
# Create the target for libipe
################################################################################

add_library(ipe ${SRC})
#set_property(TARGET codac PROPERTY CXX_STANDARD 17)
add_compile_options(-O3 -Wall)
#set_property(TARGET codac PROPERTY CXX_STANDARD_REQUIRED ON)


################################################################################
# Installation of libipe files
################################################################################

# Getting header files from sources

foreach(srcfile ${SRC})
    if(srcfile MATCHES "\\.h$" OR srcfile MATCHES "\\.hpp$")
        list(APPEND HDR ${srcfile})
        # Copying header files for other Codac libraries compiled in the same time
        file(COPY ${srcfile} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)
    endif()
endforeach()

# Generating a ipe.h file

set(IPE_MAIN_HEADER ${CMAKE_CURRENT_BINARY_DIR}/ipe.h)
file(WRITE ${IPE_MAIN_HEADER} "/* This file is generated by CMake */\n\n")
file(APPEND ${IPE_MAIN_HEADER} "#ifndef __IPE_H__\n#define __IPE_H__\n\n")
# Simplifying access to frequently used items of IBEX
file(APPEND ${IPE_MAIN_HEADER} "\n")
foreach(header_path ${HDR})
    get_filename_component(header_name ${header_path} NAME)
    file(APPEND ${IPE_MAIN_HEADER} "#include <${header_name}>\n")
endforeach()
file(APPEND ${IPE_MAIN_HEADER} "\n#endif /* __IPE_H__ */\n")
file(COPY ${IPE_MAIN_HEADER} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../../include)

# Install files in system directories

install(TARGETS ipe DESTINATION ${CMAKE_INSTALL_LIBDIR})
install(FILES ${HDR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ipe)
install(FILES ${IPE_MAIN_HEADER} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/ipe)